# portfolio-optimizer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
crawler/: README.md  pyproject.toml
crawler/mufg_funds/: scrapy.cfg
crawler/mufg_funds/mufg_funds/: items.py  middlewares.py  pipelines.py  settings.py
crawler/mufg_funds/mufg_funds/spiders/: fund_chart_spider.py  fund_list_spider.py
web/: README.md  pyproject.toml
web/src/: app.py
