[project]
name = "portfolio-optimizer"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">= 3.8"
authors = [
    {name = "Yuki Nakatsuka", email = "nk.tsssa@gmail.com"}
]

[tool.black]
line-length = 120
extend-exclude = '''
/(
  | tests/data
)/
'''

# https://docs.astral.sh/ruff/rules/
[tool.ruff]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "ERA001", "ANN101", "INP001", "PD901", "S101", "TRY003"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
python_version = "3.12"
