[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ynakatsuka", email = "nk.tsssa@gmail.com" }
]
dependencies = [
    "scrapy>=2.11.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
